# code-smells

./: CLAUDE.md  DEVELOPER.md  README.md  code-smells  devInstall.sh  install.sh
.github/workflows/: release.yml
lib/: dart.sh  detect.sh  elixir.sh  file-length.sh  output.sh  python.sh  rust.sh  typescript.sh
rust/: Cargo.toml  install.sh
rust/src/: cli.rs  config.rs  detect.rs  main.rs  output.rs
rust/src/checks/: mod.rs
rust/src/languages/: dart.rs  elixir.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
