[package]
name = "code-smells"
version = "0.1.0"
edition = "2021"
description = "A fast CLI tool to detect code smells across multiple programming languages"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
